# Rust_Tracking

./: Note.md  README.md  Tham_khảo.md
Others/: Sample_Basic_Code.md
gps_stm32f3/: Cargo.toml  Embed.toml  build.rs  rust-toolchain.toml
gps_stm32f3/.cargo/: config.toml
gps_stm32f3/src/: debug_uart.rs  main.rs  task_gps.rs
gps_stm32f3/src/task/: debug_uart.rs  mod.rs  task_gps.rs
