[package]
name = "gps_stm32f3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
alloc = []
# default = ["std", "serde"]
# std = []

[dependencies]
# Change stm32f303ze to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", features = [ "stm32f303rd", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-sync = { version = "0.6.0" }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = [ "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.2.0" }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-probe = { version = "0.3" }
# heapless = { version = "0.8", default-features = false }
heapless = { version = "0.8" }
nb = "1.0.0"
embedded-storage = "0.3.1"
static_cell = "2"
panic-halt = "0.2.0"
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
micromath = "2.0.0"
libm = "0.2.2"
nmea-parser = "0.10.0"

# Uncomment for the allocator example.
alloc-cortex-m = "0.4.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
